index.css
* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: "Rubik", sans-serif;
  background-color: #eef0f4;
  color: #432000;
  user-select: none;
  box-sizing: border-box;
}

.container {
  width: 90%;
  margin: 30px auto;
}

/* ///////////////////group actions/////////////////// */

.group-top,
.group-bottom {
  display: flex;
  margin: 2px auto;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.group-selector,
.group-entry {
  flex: 1 1 0;
  background-color: #dce1eb;
  border: 2px solid transparent;
  padding: 5px;
  border-radius: 8px;
  font-family: "Rubik", sans-serif;
  outline: none;
  overflow: auto;
}

.group-entry:focus {
  border-color: black;
}

.item-entry::placeholder,
.group-entry::placeholder,
.group-selector {
  color: rgb(87, 87, 87);
}

.copy,
.leave,
.join {
  min-width: 60px;
  height: 25px;
  border: 1px solid transparent;
  color: #fdfdfd;
  background-color: #252525;
  margin: 2px;
  border-radius: 8px;
  text-align: center;
  font-family: "Rubik", sans-serif;
}

.group-label {
  font-size: 13.33px;
  margin-left: 2px;
  margin-right: 2px;
  text-align: center;
  min-width: 60px;
}

img {
  width: 150px;
  margin: 0 auto;
  display: block;
}

/* ///////////////////item entry/////////////////// */

.item-entry {
  color: #432000;
  background-color: #dce1eb;
  border: 2px solid transparent;
  padding: 15px;
  border-radius: 8px;
  font-size: 20px;
  text-align: center;
  font-family: "Rubik", sans-serif;
  margin: 10px 0;
  width: 100%;
}
.item-entry:focus {
  box-shadow: 0 0 5px #252525;
  border: 2px solid black;
  outline: none;
}

.add-item-btn {
  background-color: #ffd9009a;
  color: black;
  border: 0;
  padding: 15px;
  border-radius: 8px;
  font-size: 20px;
  text-align: center;
  font-family: "Rubik", sans-serif;
  width: 100%;
}

.add-item-btn:active {
  color: #fdfdfd;
  background-color: #252525;
}

/* ///////////////////list/////////////////// */

ul {
  list-style-type: none;
  padding: 0;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  gap: 8px;
  margin: 10px 0;
}

li {
  font-size: 20px;
  display: flex;
  align-items: center;
  justify-content: left;
  background-color: #fffdf8;
  padding: 0px 10px;
  border-radius: 8px;
  flex-grow: 1;
  overflow: hidden;
  border: 2px solid transparent;
  margin: 0;
  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
}

.highlight {
  background-color: #fffdc1;
}

.highlight .item-text {
  opacity: 0.5;
}

.item-text {
  padding: 5px 5px;
  border: none;
  overflow: auto;
  resize: none;
  color: #432000;
  border: none;
  font-size: 20px;
  font-family: "Rubik", sans-serif;
  flex: 1;
}

li:has(.item-text:focus) {
  background-color: #dce1eb;
  border-color: black;
}

.item-text:focus {
  outline: none;
}

.mark,
.delete {
  cursor: pointer;
  border: none;
  background-color: transparent;
  font-weight: 900;
  text-align: center;
  line-height: 0%;
  padding: 0;
  min-width: 30px;
  min-height: 30px;
  transition: scale 0.05s ease;
}

.mark {
  margin-right: -10px;
  margin-left: auto;
  justify-self: flex-end;
  order: 1;
}

.delete {
  margin-left: -10px;
  order: -1;
  color: #fc7371;
}

/* ///////////////////multi options///////////////////*/

.multi-item-options {
  display: flex;
  margin-top: 10px;
}

.hidden {
  display: none;
}

.delete-all,
.unmark-all,
.mark-all {
  border: 1px solid transparent;
  color: #fdfdfd;
  background-color: #252525;
  margin: 2px;
  border-radius: 8px;
  text-align: center;
  font-family: "Rubik", sans-serif;
  font-weight: bold;
}

.delete-all {
  margin-right: auto;
}

/* ///////////////////hover devices only/////////////////// */

@media (any-hover: hover) and (pointer: fine) {
  .copy:hover,
  .leave:hover,
  .join:hover {
    color: #252525;
    background-color: #fdfdfd;
  }
  .add-item-btn:hover {
    color: #fdfdfd;
    background-color: #252525;
  }

  ul li:hover {
    box-shadow: 0 0 5px #252525;
  }

  .delete:hover,
  .mark:hover {
    scale: 1.5;
  }

  .delete-all:hover {
    background-color: #fc7371;
    color: black;
  }

  .mark-all:hover {
    background-color: #fffdc1;
    color: black;
  }

  .unmark-all:hover {
    background-color: #fdfdfd;
    color: black;
  }
}

